amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


  FIX: Compatibility bugfixes to TitleProxy, thanks to Daniel Molkentin
       <danimo@kde.org>. I think we've now got 100% Shoutcast compatibility.
  ADD: Allow changing volume by using the mousewheel anywhere on the toolbar.
  FIX: Wheel-scrolling toolbar's volume slider doesn't change volume (BR 81155).
  FIX: ContextBrowser is now shown in proper colors for every scheme.
  CHG: Added track's physical location to the Meta Information dialog.
  FIX: Show last playtime in localtime instead of UTC.
  FIX: ContextBrowser not showing all items for current album.
  FIX: Not all SQL queries were "string-escaped".
  ADD: Added statistics database, which keeps track of how often and when you play
       a specific song.

VERSION 1.0-beta3:
  ADD: Additional volume slider for playlist window.
  ADD: ContextBrowser shows you images and information to the current song/artist.
       It depends on the collection and is presented as an HTML widget.
  CHG: Improved color handling and visual feedback in the GUI.
  ADD: Global shortcut for play/pause action, as requested by multimedia-keyboard
       users (BR 79541).
  CHG: Small player-window can be switched off now.
  FIX: CollectionBrowser out of order after scanning.
  FIX: TitleProxy partly rewritten. Should be more compatible with many streams
       and not be able to freeze the app any longer.
  FIX: When playing a stream with title streaming activated, the track is not
       marked as playing (BR 79999).
  FIX: Invoking "Track Information" in Collection Browser sometimes crashed
       the application (BR 80266).
  FIX: In CollectionBrowser's folder setup dialog pressing cancel did not abort
       (BR 80451). Thanks to Michael Pyne <pynm0001@comcast.net> for patch.
  ADD: Option for selecting sound output system (OSS/Alsa). Currently only
       used with GStreamer engine.