@@ -3,6 +3,7 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  FIX: Prevent TitleProxy from showing the same metadata over and over.
   FIX: Compatibility bugfixes to TitleProxy, thanks to Daniel Molkentin
        <danimo@kde.org>. I think we've now got 100% Shoutcast compatibility.
   ADD: Allow changing volume by using the mousewheel anywhere on the toolbar.
